--- a/themes/base_files/less/tiki-bootstrap_overrides.less
+++ b/themes/base_files/less/tiki-bootstrap_overrides.less
@@ -63,6 +63,13 @@ body.fullscreen.tiki.navbar-padding {
 	padding-top: 0;
 }
 
+#col2, #col3 {
+	img {
+		max-width: 100%;
+		height: auto;
+	}
+}
+
 .panel-body ul.nav {
 	overflow: visible;
 }
